<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="@dimen/box_inset_layout_padding" tools:context=".RegisterActivity">

    <LinearLayout android:id="@+id/linearLayout" android:layout_width="336dp" android:layout_height="347dp" android:gravity="center" android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputLayout android:id="@+id/regMaill" android:layout_width="match_parent" android:layout_height="wrap_content" tools:layout_editor_absoluteY="307dp">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/regMail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginEnd="20dp" android:layout_marginBottom="4dp" android:ems="10" android:hint="@string/email_address" android:inputType="textPersonName" android:textColor="@color/black" android:textColorHint="@color/gray" android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@+id/regPasswordd" android:layout_width="match_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="true" app:passwordToggleTint="@color/sign_up_button" tools:layout_editor_absoluteY="366dp">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/regPassword" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginTop="4dp" android:layout_marginEnd="20dp" android:ems="10" android:hint="Password" android:inputType="textPassword" android:textColor="@color/black" android:textColorHint="@color/gray" android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout android:id="@+id/regPassword22" android:layout_width="match_parent" android:layout_height="wrap_content" app:passwordToggleEnabled="true" app:passwordToggleTint="@color/sign_up_button" tools:layout_editor_absoluteY="426dp">

            <com.google.android.material.textfield.TextInputEditText android:id="@+id/regPassword2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginTop="8dp" android:layout_marginEnd="20dp" android:ems="10" android:hint="Confirm Password" android:inputType="textPassword" android:textColor="@color/black" android:textColorHint="@color/gray" android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button android:id="@+id/regBtn" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/sign_up" android:textAllCaps="false" android:textColor="#ffffff" android:textSize="17sp" android:textStyle="bold" tools:layout_editor_absoluteX="40dp" tools:layout_editor_absoluteY="546dp" />


        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center" android:orientation="horizontal" tools:layout_editor_absoluteY="671dp">

            <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/i_m_already_a_member" android:textColor="@color/black" android:textSize="15sp" />

            <TextView android:id="@+id/signIn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="2dp" android:text="@string/sign_in" android:textColor="@color/sign_up_button" android:textSize="15sp" />

        </LinearLayout>


        <ProgressBar android:id="@+id/regProgressBar" style="?android:attr/progressBarStyle" android:layout_width="wrap_content" android:layout_height="wrap_content" tools:layout_editor_absoluteX="182dp" tools:layout_editor_absoluteY="546dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>